SSB > Country flag appear distorted on 'Form builder' and 'Simple form' component at backend and frontend of application #10346

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
@@ -217,7 +217,7 @@
             padding-right: {{vm.component.formSettings.spacing.pr/2}}px !important;
         }
 
-        .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row3 div.input-field-container:not(:nth-child(3n)), .input-field-spacing.input-fields.nth-row3 div.input-field-container:not(:nth-child(3n+1)) {
+        .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row3 div.input-field-container:not(:nth-child(3n)), .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row3 div.input-field-container:not(:nth-child(3n+1)) {
             padding-left: {{vm.component.formSettings.spacing.pr/2}}px !important;
             padding-right: {{vm.component.formSettings.spacing.pr/2}}px !important;
         }
@@ -230,7 +230,7 @@
             padding-right: {{vm.component.formSettings.spacing.pr/2}}px !important;
         }
 
-        .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row4 div.input-field-container:not(:nth-child(4n)), .input-field-spacing.input-fields.nth-row4 div.input-field-container:not(:nth-child(4n+1)) {
+        .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row4 div.input-field-container:not(:nth-child(4n)), .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row4 div.input-field-container:not(:nth-child(4n+1)) {
             padding-left: {{vm.component.formSettings.spacing.pr/2}}px !important;
             padding-right: {{vm.component.formSettings.spacing.pr/2}}px !important;
         }
@@ -243,7 +243,7 @@
             padding-right: {{vm.component.formSettings.spacing.pr/2}}px !important;
         }
 
-        .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row5 div.input-field-container:not(:nth-child(5n)), .input-field-spacing.input-fields.nth-row5 div.input-field-container:not(:nth-child(5n+1)) {
+        .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row5 div.input-field-container:not(:nth-child(5n)), .form-builder-{{vm.component._id}} .input-field-spacing.input-fields.nth-row5 div.input-field-container:not(:nth-child(5n+1)) {
             padding-left: {{vm.component.formSettings.spacing.pr/2}}px !important;
             padding-right: {{vm.component.formSettings.spacing.pr/2}}px !important;
         }
