--- a/public/components/simple-form_v1.html
+++ b/public/components/simple-form_v1.html
@@ -183,7 +183,7 @@
   padding-right: {{component.formSettings.spacing.pr/2}}px !important;
 }
 
-.simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row3 div.input-field-container:not(:nth-child(3n)), .input-fields.nth-row3 div.input-field-container:not(:nth-child(3n+1)) {
+.simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row3 div.input-field-container:not(:nth-child(3n)), .simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row3 div.input-field-container:not(:nth-child(3n+1)) {
     padding-left: {{component.formSettings.spacing.pr/2}}px !important;
     padding-right: {{component.formSettings.spacing.pr/2}}px !important;
 }
@@ -196,7 +196,7 @@
   padding-right: {{component.formSettings.spacing.pr/2}}px !important;
 }
 
-.simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row4 div.input-field-container:not(:nth-child(4n)), .input-fields.nth-row4 div.input-field-container:not(:nth-child(4n+1)) {
+.simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row4 div.input-field-container:not(:nth-child(4n)), .simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row4 div.input-field-container:not(:nth-child(4n+1)) {
     padding-left: {{component.formSettings.spacing.pr/2}}px !important;
     padding-right: {{component.formSettings.spacing.pr/2}}px !important;
 }
@@ -209,7 +209,7 @@
   padding-right: {{component.formSettings.spacing.pr/2}}px !important;
 }
 
-.simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row5 div.input-field-container:not(:nth-child(5n)), .input-fields.nth-row5 div.input-field-container:not(:nth-child(5n+1)) {
+.simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row5 div.input-field-container:not(:nth-child(5n)), .simple-form-v1 .simple-form-{{component._id}} .input-fields.nth-row5 div.input-field-container:not(:nth-child(5n+1)) {
     padding-left: {{component.formSettings.spacing.pr/2}}px !important;
     padding-right: {{component.formSettings.spacing.pr/2}}px !important;
 }
