--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -68,6 +68,11 @@
             width: 100%;
             height: 100%;
             max-width: 100%;
+            .ssb-media-query-small-only({
+                .word-break{
+                    word-break: break-all;
+                }
+            }
             &.mouse-off{
                 display: block;
             }
