--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -580,6 +580,15 @@
         [social-link-component]{
             display:none !important;
         }
+        .ssb-media-query-small-only({
+            .ssb-component.ssb-ssb-text,{ 
+                width: 80% !important;
+                float: left;
+            } 
+            .navbar-collapse{
+                width: 100%!important;
+            }
+        });
     }
 
     /*
@@ -631,11 +640,12 @@
             width:50%;
         }
         .ssb-media-query-small-only({
-            .ssb-component.ssb-ssb-text{
-                width:100% !important;
-            }
-            .ssb-component.ssb-navigation{
-                width:100% !important;
+            .ssb-component.ssb-ssb-text,{ 
+                width: 80% !important;
+                float: left;
+            } 
+            .navbar-collapse{
+                width: 100%!important;
             }
         });
         [social-link-component]{
