Add org config to home_new.jade

--- a/templates/home_new.jade
+++ b/templates/home_new.jade
@@ -34,7 +34,7 @@ block content
                         img(src="#{val.logo}")
                     if val.domain
                       span=val.domain
-                    if !val.domain && val.orgId != 1 && val.orgId != 4 && val.orgId !=5
+                    if !val.domain && val.orgId != 1 && val.orgId != 4 && val.orgId !=5 && val.orgId !=6
                       span=val.subdomain+ domainPrefix + '.indigenous.io'
                     if !val.domain && val.subdomain && val.orgId == 1
                       span=val.subdomain+ domainPrefix + '.gorvlvr.com'
@@ -42,6 +42,8 @@ block content
                       span=val.subdomain+ domainPrefix + '.techevent.us'
                     if !val.domain && val.subdomain && val.orgId == 5
                       span=val.subdomain + domainPrefix + '.leadsource.cc'
+                    if !val.domain && val.subdomain && val.orgId == 6
+                      span=val.subdomain + domainPrefix + '.amrvlvr.com'
                     i.fa.fa-chevron-right.pull-right
                   div.clearfix
         // start: COPYRIGHT
