Make half overlay whole for small screens (sm and xs) #10398

--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -64,6 +64,9 @@
                     word-break: break-all;
                 }
             })
+            @media screen and (max-width: 991px){
+                width: 100%;
+            }
         }
         .image-50-details .ssb-element-text{
             height: 396px ;
