--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -57,16 +57,16 @@
             }
         }
         .image-50-details{
+            @media (max-width: 767px) {
+               width: 100%;
+            }
             width: 50%;
-            height: 396px ;
+            height: 396px;
             .ssb-media-query-small-only({
                 .word-break{
                     word-break: break-all;
                 }
-            })
-            @media screen and (max-width: 991px) {
-                width: 100%;
-            }
+            })            
         }
         .image-50-details .ssb-element-text{
             height: 396px ;
