Add UI for global CSS (use Scripts in Settings as example) #10396

--- a/public/admin/assets/views/partials/settings.html
+++ b/public/admin/assets/views/partials/settings.html
@@ -26,6 +26,9 @@
                             <li ng-if='account.showhide.userScripts'>
                                 <a class="text-dark" ng-click="viewSettings('website', 'Scripts')">Scripts</a>
                             </li>
+                            <li ng-if='account.showhide.customCss'>
+                                <a class="text-dark" ng-click="viewSettings('website', 'Custom Css')">Custom Css</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -317,7 +320,23 @@
                           <div class="clearfix"></div>
                       </form>
                       <div class="clearfix"></div>
-                  </tab>
+                </tab>
+                <tab heading="Custom Css" ng-if='account.showhide.customCss'>
+                      <form class="col-sm-6 form-horizontal">
+                          <div class="form-group">
+                              <label>Enable Custom Css</label>
+                              <span tooltip-placement="bottom" tooltip="Enable custom css to your website"><i class="fa fa-info-circle" /></span>
+                              <switch ng-model="website.resources.toggles.customCss" class="pull-right"></switch>
+                          </div>
+                          <div class='form-group' ng-if='website.resources.toggles.customCss'>
+                            <label>Global Css</label>
+                            <span tooltip-placement="bottom" tooltip="Add custom css snippets for your website globally"><i class="fa fa-info-circle" /></span>
+                            <textarea class='form-control' ng-model='website.resources.customCss.global.original'></textarea>
+                          </div>
+                          <div class="clearfix"></div>
+                      </form>
+                      <div class="clearfix"></div>
+                </tab>
             </tabset>
         </div>
         <!-- <div ng-show="settingsView == 'customers'">
