--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -217,9 +217,15 @@
     /*
      * layout-header-v4
      */
-    .ssb-page-section-layout-header-v4 .navigation-v2 .navbar {
-
-    }
+     .ssb-page-section-layout-header-v4 {
+        .navigation-v2 .navbar { 
+        }
+        .fr-view img.fr-dib.fr-fir {
+            .ssb-media-query-small-only({ 
+                margin-right: auto;
+            })
+        }
+    } 
 
     .ssb-page-section-layout-header-v4 .navigation-v2 .navbar .navbar-header {
 
