#10402 button style issue updated

--- a/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
@@ -30,11 +30,9 @@
     padding-right: 0;
 }
 
-
-
-
 .ssb-sidebar .ssb-theme-btn,
-[class*="ssb-theme-"] .ssb-theme-btn {
+[class*="ssb-theme-"] .ssb-theme-btn ,
+.ssb-theme-default .fr-view span[style~="color:"] a.ssb-theme-btn {
 
     &.ssb-theme-btn-style-1 {
         @ssb-theme-btn-style-1-bg-color: color(#f1c40f);
