Allow any text component to be turned into a ticker (Boolean) #10400

--- a/public/less/ssb-site-builder/ssb-components.less
+++ b/public/less/ssb-site-builder/ssb-components.less
@@ -58,3 +58,4 @@
 @import "ssb-components/ssb-blog-post-detail.less";
 @import "ssb-components/ssb-recent-posts.less";
 @import "ssb-components/ssb-rss-feed.less";
+@import "ssb-components/ssb-text-ticker.less";
