Add speed control to (new) Ticker feature #10412

--- a/public/less/ssb-site-builder/ssb-components/ssb-text-ticker.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-text-ticker.less
@@ -32,3 +32,14 @@
   -webkit-animation-duration: 20s;
   animation-duration: 20s;
 }
+
+
+.generate-ticker-speed-classes(50);
+
+.generate-ticker-speed-classes(@n, @i: 1) when (@i =< @n) {
+  .ticker-speed-@{i} {
+    -webkit-animation-duration: @i * 1s;
+  	animation-duration: @i * 1s!important;
+  }
+  .generate-ticker-speed-classes(@n, (@i + 1));
+}
