--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -114,23 +114,10 @@
             }
         });
         .ssb-media-query-medium({
-            //background: transparent!important;
-            position: absolute;
-            height: 100%;
+            background: transparent!important;
         });
 
     }
-
-
-    .ssb-page-section-layout-nav-hero:not(.ssb-section-amm):not(.ssb-section-wmm) [ssb-image-component] + .flex-container-absolute-column{
-        .ssb-media-query-medium({
-            //background: transparent!important;
-            position: relative !important;
-        });
-    }
-
-
-        
 
     .ssb-page-section-layout-blur-image [ssb-image-component]{
 
