Find, eliminate delay loading nav+hero image #10409

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-image/ssb-image.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-image/ssb-image.component.html
@@ -9,7 +9,7 @@
 	        background: url("{{vm.component.src}}");
 	        background-size: cover;
 	        background-repeat: no-repeat;'> 		
-		<img ng-src="{{vm.component.src}}" style="visibility: hidden; opacity: 0;"/>		
+		<img ng-src="{{vm.component.src}}" class="ssb-image-background" />		
 	</div>
 </div>
 
