#10271 code reverted for unevent fontsize applied on every element

--- a/public/less/frontend/blog.less
+++ b/public/less/frontend/blog.less
@@ -216,20 +216,13 @@
         border-radius: 2px;
     }
 }
-@media screen and (max-width: 767px)
-{
-  .ssb-component.ssb-ssb-text.container-fluid{
-   font-size: 30px;
-  }
-
+@media screen and (max-width: 767px){
   div#px-ele-{
     background-size: cover !important;
     background-position: 25% 41px !important;
     min-height: 580px;
 
   }
-
-
 }
 .ssb-wrap-left-fixed-left-nav .navbar .nav li a {
     display: inline-block;
