#10271 header text fix

--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -252,3 +252,9 @@ ul.nav.navbar-nav{
 .overflow_visible-without-index{
     overflow: visible !important;
 }
+@media screen and (max-width: 767px)
+{
+   .ssb-page-section-layout-header-v1.ssb-page-section-layout-header [ssb-text-component]{
+    font-size:30px;
+   }
+}
