--- a/public/less/ssb-site-builder/ssb-sections/ssb-text-column.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-text-column.less
@@ -107,7 +107,8 @@
 	  .generate-row-spacing-classes(@n, (@i + 10));
 	}
 }
-.ssb-text-column-layout.ssb-page-section-layout-1-col-grid{
+.ssb-text-column-layout.ssb-page-section-layout-1-col-grid,
+section.ssb-page-section-layout-1-col-grid{
     .col-xs-15,
 	.col-sm-15,
 	.col-md-15,
