--- a/public/less/ssb-site-builder/ssb-sections/ssb-text-column.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-text-column.less
@@ -129,16 +129,19 @@ section.ssb-page-section-layout-1-col-grid{
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		height: 100%;
 	}
 	.v-dispaly-top-align{
 		display: flex; 
 		align-items: flex-start;
 		justify-content: center;
+		height: 100%;
 	}
 	.v-dispaly-bottom-align{
 		display: flex; 
 		align-items: flex-end;
 		justify-content: center;
+		height: 100%;
 	}		
     [class*="ssb-component-layout-columns-spacing-1"],
     [class*="ssb-component-layout-columns-spacing-2"],
