Front end - CSS applied in Global or Page CSS should override platform-sourced CSS #10396

--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -196,8 +196,6 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
         }
 
 
-
-
 if pages
     script(type="text/javascript").
         window.indigenous = window.indigenous || {};
@@ -243,3 +241,5 @@ if customFonts
         window.indigenous.precache = window.indigenous.precache || {};
         window.indigenous.precache.siteData = window.indigenous.precache.siteData || {};
         window.indigenous.precache.siteData.customFonts = !{JSON.stringify(customFonts)};
+
+| !{customCss}
