#9689 changes for button

--- a/public/less/sections/editor.less
+++ b/public/less/sections/editor.less
@@ -582,7 +582,7 @@ fieldset[disabled] .btn-vimeo-square.active {
         {
             top: inherit !important;
         }
-    }    
+    }
 }
 
 .editor-toolbar-wrap {
@@ -955,7 +955,7 @@ select.hour-start-select{
     padding-right: 5px;
 }
 .post-categories-ui-select{
-    
+
     ul.dropdown-menu {
         max-height: 100px;
         min-height: 100px;
@@ -963,9 +963,15 @@ select.hour-start-select{
     }
 }
 .post-tags-ui-select{
-    
+
     ul.dropdown-menu {
         max-height: 100px;
         min-height: 100px;
     }
+}
+.max-width-custom-input{
+    display: block;
+    width: 100%;
+    padding: 10px !important;
+    border-radius: 4px;
 }
