--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -145,7 +145,9 @@
         }
         div.image-overlay{ 
             div.header, div.desc{ 
-                min-height: 125px;
+                &:not(.full_height){
+                    min-height: 125px;
+                }
             }  
         } 
     }
@@ -189,7 +191,9 @@
             }
             div.image-overlay{
                 div.header, div.desc{ 
-                    min-height: 125px!important;
+                    &:not(.full_height){
+                        min-height: 125px!important;
+                    }
                 } 
             } 
         }
@@ -217,7 +221,9 @@
             }
             div.image-overlay{ 
                 div.header, div.desc{  
-                    height: 50%; 
+                    &:not(.full_height){
+                         height: 50%; 
+                    }
                 } 
             } 
             .editing.image-wrap {
@@ -248,7 +254,9 @@
             }
             div.image-overlay{ 
                 div.header, div.desc{ 
-                    min-height: 140px
+                    &:not(.full_height){
+                        min-height: 140px;
+                    }
                 } 
             }
              
@@ -309,7 +317,9 @@
             }
             div.image-overlay{ 
                 div.header, div.desc{ 
-                    min-height: 125px
+                    &:not(.full_height){
+                        min-height: 125px;
+                    }
                 } 
             }
         }
@@ -343,7 +353,9 @@
             }
             div.image-overlay{ 
                 div.header,div.desc{  
-                    min-height: 125px
+                    &:not(.full_height){
+                        min-height: 125px
+                    }
                 } 
             } 
         }
@@ -416,7 +428,9 @@
                 div.image-overlay{
                     
                     div.header,div.desc{ 
-                        min-height: 75px;
+                        &:not(.full_height){
+                            min-height: 75px;
+                        }
                     } 
                 }
                  
@@ -433,7 +447,9 @@
                         }
                         div.image-overlay{ 
                             div.header, div.desc{ 
-                                min-height: 165px;
+                                &:not(.full_height){
+                                    min-height: 165px;
+                                }
                             } 
                         } 
                     }
