putting #10314 fix in right file

--- a/public/less/ssb-site-builder/ssb-sections/ssb-vertical-nav.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-vertical-nav.less
@@ -42,4 +42,8 @@
     .ssb-wrap-left-fixed-left-nav .v-dispaly-auto-align {
       color: #939597;
     }
+    .ssb-wrap-left-fixed-left-nav .navbar .nav li a {
+      display: inline-block;
+    }
+
 }
