changes for vertical nav for #10377

--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -233,6 +233,10 @@
             width: 25%;
             float: left;
         }
+      .ssb-wrap-left-fixed-left-nav .ssb-page-section-layout-header-v4 .navbar-header,.ssb-wrap-left-fixed-left-nav .ssb-page-section-layout-header-v7 .navbar-header{
+             width:100%;
+            float: left;
+        }
        .ssb-page-section-layout-header-v4 .navbar-header .logo-1,.ssb-page-section-layout-header-v7 .navbar-header .logo-1{
            width:100%;
        }
