#10314 fix for big screens

--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -127,6 +127,7 @@ ul.nav {
     z-index: 5;
 }
 
+
 .navigation-v1 {
     .navbar {
 
@@ -157,6 +158,8 @@ ul.nav {
         }
     }
 }
+
+
 .nav-undernav .component{
    position: relative;
    z-index: 1;
@@ -257,4 +260,10 @@ ul.nav.navbar-nav{
    .ssb-page-section-layout-header-v1.ssb-page-section-layout-header [ssb-text-component]{
     font-size:30px;
    }
+}
+@media screen and (min-width: 1600px)
+{
+ .ssb-wrap-left-fixed-left-nav .navigation-v1  .container {
+      width: 100%;
+    }
 }
