--- a/public/less/frontend/components/navbar-v2.less
+++ b/public/less/frontend/components/navbar-v2.less
@@ -147,3 +147,9 @@
 .navbgcolor .v-dispaly-auto-align {
     color: #939597;
 }
+@media screen and (min-width: 1600px)
+{
+ .ssb-wrap-left-fixed-left-nav .navigation-v2  .container {
+      width: 100%;
+    }
+}
