--- a/public/admin/assets/js/ssb-site-builder/ssb-controls/ssb-page-settings-modal/ssb-page-settings-modal.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-controls/ssb-page-settings-modal/ssb-page-settings-modal.component.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </tab>
-                <tab ng-if='vm.parentVm.state.website.resources.toggles.customCss'>
+                <tab ng-if='vm.parentVm.state.website.resources.toggles.customCss && vm.parentVm.state.account.showhide.customCss'>
                     <tab-heading>
                         Page Custom Css
                     </tab-heading>
