#10435 Show userScripts only if its enabled from account

--- a/public/admin/assets/js/ssb-site-builder/ssb-controls/ssb-page-settings-modal/ssb-page-settings-modal.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-controls/ssb-page-settings-modal/ssb-page-settings-modal.component.html
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </tab>
-                <tab ng-if='vm.parentVm.state.website.resources.toggles.userScripts'>
+                <tab ng-if='vm.parentVm.state.website.resources.toggles.userScripts && vm.parentVm.state.account.showhide.userScripts'>
                     <tab-heading>
                         Page Scripts
                     </tab-heading>
