layout-header-v15 updated for small screen #10378

--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -713,6 +713,10 @@
                 width: 80% !important;
                 float: left;
             }
+            .ssb-component.ssb-navigation{ 
+                float: none;
+                width: auto !important;
+            }
             .navbar-collapse{
                 width: 100%!important;
             }
