updated favicon for frontend #10417 for AMRVLVR

--- a/templates/snippets/_layout_new.jade
+++ b/templates/snippets/_layout_new.jade
@@ -23,7 +23,9 @@ html(class="no-js", lang="en")
             if account && account.orgId == 1
                 link(rel="shortcut icon", href='https://s3.amazonaws.com/indigenous-digital-assets/account_1301/rvlvr-icon_1489761269532.png')
             else if account && account.orgId == 5
-                link(rel="shortcut icon", href='https://s3.amazonaws.com/indigenous-digital-assets/account_1377/favicon_1508748570313.png')    
+                link(rel="shortcut icon", href='https://s3.amazonaws.com/indigenous-digital-assets/account_1377/favicon_1508748570313.png')
+            else if account && account.orgId == 6
+                link(rel="shortcut icon", href='https://s3.amazonaws.com/indigenous-digital-assets/account_1395/favicon_1510866844738.png')       
             else
                 link(rel="shortcut icon", href='https://s3.amazonaws.com/indigenous-account-websites/acct_6/favicon.ico')
             link(rel='stylesheet', href='/css/style.default.css')
