#10417 favicon style issue for amrvlvr

--- a/public/admin/assets/var/am/views/partials/settings.html
+++ b/public/admin/assets/var/am/views/partials/settings.html
@@ -209,11 +209,11 @@
 
                                         <img class="top-favicon" ng-if="website.settings.favicon" ng-src="{{ website.settings.favicon }}" err-src="assets/var/am/images/favicon.png">
 
-                                        <img class="top-favicon default-rvlvr-logo" ng-if="!website.settings.favicon" src="assets/var/am/images/favicon.png">
+                                        <img class="top-favicon " ng-if="!website.settings.favicon" src="assets/var/am/images/favicon.png">
 
                                         <img class="bottom-favicon" ng-if="website.settings.favicon" ng-src="{{ website.settings.favicon }}" err-src="assets/var/am/images/favicon.png">
 
-                                        <img class="bottom-favicon default-rvlvr-logo" ng-if="!website.settings.favicon" src="assets/var/am/images/favicon.png">
+                                        <img class="bottom-favicon " ng-if="!website.settings.favicon" src="assets/var/am/images/favicon.png">
                                     </div>
                                     <div class="user-image-buttons-edit">
                                         <span class="btn btn-primary" ng-click="openMediaModal()"><i class="fa fa-pencil"></i> Edit</span>
