--- a/public/less/ssb-site-builder/ssb-sections.less
+++ b/public/less/ssb-site-builder/ssb-sections.less
@@ -216,7 +216,12 @@
     z-index: 1;
     pointer-events: none;
     visibility: hidden;
-    height: 100% !important;
+    &:not(.blog-list-section ){
+        height: 100% !important;
+    }
+    &.blog-list-section{ 
+        height: 100% ;
+    }
 }
 
 .blog-list-section.ssb-fixed-clone-element {
