#10434 User encounters weird behavior after enabling ticker on any text element #10434

--- a/public/less/ssb-site-builder/ssb-components/ssb-text-ticker.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-text-ticker.less
@@ -21,7 +21,9 @@
 
 /* Formatting the ticker content background, font color, padding and exit state */
 #ticker {
-   white-space: nowrap;
+  display: inline-block;
+  min-width: 100%;
+  white-space: nowrap;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
